# codenames

./: .gitignore  CodenameHints.ipynb  README.md  pyproject.toml
codenames/: model.py  strategy.py  utils.py
codenames/data/: words-en.lst
